--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
+spring.application.name=cloud-foundry-mcp-server
+
 spring.ai.mcp.server.name=cloud-foundry-mcp
-spring.ai.mcp.server.version=1.0.0
-spring.ai.mcp.server.prompt-change-notification=false
-spring.ai.mcp.server.resource-change-notification=false
+spring.ai.mcp.server.protocol=sse
+server.shutdown=immediate
 
 logging.level.io.modelcontextprotocol=DEBUG
