Use Streamable HTTP Transport

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cloud-foundry-mcp-server
 
 spring.ai.mcp.server.name=cloud-foundry-mcp
-spring.ai.mcp.server.protocol=sse
+spring.ai.mcp.server.protocol=streamable
 server.shutdown=immediate
 
 logging.level.io.modelcontextprotocol=DEBUG
